--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "picker": "^0.1.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-element-dropdown": "^2.6.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-svg": "^13.4.0",
     "victory-native": "^36.6.8"
   },
